telemetry/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: {name: telemetry, labels: {app.kubernetes.io/part-of: aria}}
